deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sion2k-site
  labels:
    app.kubernetes.io/name: sion2k-site
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sion2k-site
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sion2k-site
        app.kubernetes.io/component: web
    spec:
      imagePullSecrets:
        - name: registry-sion2k-pull
      containers:
        - name: web
          image: registry.sion2k.ru/home/sion2k-site:0.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
