deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sion2k-site
  labels:
    app.kubernetes.io/name: sion2k-site
spec:
  selector:
    app.kubernetes.io/name: sion2k-site
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
