deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sion2k-site
  annotations:
    cert-manager.io/cluster-issuer: corp-acme
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sion2k.ru
        - www.sion2k.ru
      secretName: sion2k-site-tls
  rules:
    - host: sion2k.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sion2k-site
                port:
                  number: 80
    - host: www.sion2k.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sion2k-site
                port:
                  number: 80
